# cpputil

./: .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md
cmake/: ConfigureLibrary.cmake  ConfigureTest.cmake  FindPackages.cmake  InstallLibrary.cmake  SetCMakeEnvironment.cmake
docs/: cpputil.puml
include/: cpputil.hpp  io.hpp  linalg.hpp  miscellaneous.hpp
src/: CMakeLists.txt  io.cpp  linalg.cpp  miscellaneous.cpp
tests/: io_test.cpp  linalg_test.cpp
tools/: HEADER
tools/conda.recipe/: build.sh  meta.yaml
